{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 48,
  "lineage": "3f415c85-38a6-7ad8-d4aa-55c10ada0187",
  "resources": [
    {
      "module": "module.adds",
      "mode": "managed",
      "type": "aws_instance",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:281138985036:instance/i-0be701cce6ff8f057",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be701cce6ff8f057",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0eb4ffe1ad08e8306"
              }
            ],
            "primary_network_interface_id": "eni-0eb4ffe1ad08e8306",
            "private_dns": "ip-10-0-1-248.ec2.internal",
            "private_ip": "10.0.1.248",
            "public_ip": "3.237.187.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04847fd04d872dca5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cdc37ec9e32229ef",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d6e75651c1802ac"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "module.adds.aws_network_interface.foo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281138985036:internet-gateway/igw-0897f11d0df7ce458",
            "id": "igw-0897f11d0df7ce458",
            "owner_id": "281138985036",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09d6a121ecd49f7d5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.adds",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0eb4ffe1ad08e8306",
            "mac_address": "02:81:71:24:42:33",
            "private_ip": "10.0.1.248",
            "private_ips": [
              "10.0.1.248"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06d6e75651c1802ac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cdc37ec9e32229ef",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ea11c76caf68a9e",
            "owner_id": "281138985036",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0897f11d0df7ce458",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09d6a121ecd49f7d5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f94e41c2e5dd821",
            "route_table_id": "rtb-03ea11c76caf68a9e",
            "subnet_id": "subnet-0cdc37ec9e32229ef"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281138985036:security-group/sg-089191161eba26045",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089191161eba26045",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "281138985036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d6a121ecd49f7d5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281138985036:subnet/subnet-0cdc37ec9e32229ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cdc37ec9e32229ef",
            "map_public_ip_on_launch": true,
            "owner_id": "281138985036",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-09d6a121ecd49f7d5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281138985036:vpc/vpc-09d6a121ecd49f7d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e320052df4c4ab51",
            "default_route_table_id": "rtb-005befe3abd696f75",
            "default_security_group_id": "sg-06d6e75651c1802ac",
            "dhcp_options_id": "dopt-0e88e32e3784e54bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09d6a121ecd49f7d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-005befe3abd696f75",
            "owner_id": "281138985036",
            "tags": {
              "Name": "module"
            }
          }
        }
      ]
    }
  ]
}